kubernetes/scm-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supply-chain-blockchain-deployment
  labels:
    app: supply-chain-blockchain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supply-chain-blockchain
  template:
    metadata:
      labels:
        app: supply-chain-blockchain
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: secretro-key
      containers:
      - name: supply-chain-blockchain
        image: eu.gcr.io/goal-service/scm:TAG
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          failureThreshold: 1
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
