kubernetes/scm-service.yml
apiVersion: v1
kind: Service
metadata:
  name: supply-chain-blockchain-service
  labels:
    app: supply-chain-blockchain
spec:
  ports:
  - port: 8080
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: supply-chain-blockchain
