kubernetes/scm-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: supply-chain-blockchain
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: supply-chain-blockchain-service
          servicePort: 8080
